test fix gradient on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -634,7 +634,6 @@ body {
     align-items: center;
     padding: 5px;
     margin-bottom: 10px;
-    min-height: 30px;
 }
 
 .columnTexts_wrapTittle--white {
@@ -686,7 +685,8 @@ body {
     bottom: 2%;
     transform: translate(-50%, -50%);
     width: 100vw;
-    background: rgb(255, 255, 255);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(50%, rgba(11, 11, 13, 1)), to(rgba(255, 255, 255, 0)));
+    background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(11, 11, 13, 1) 50%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(11, 11, 13, 1) 50%, rgba(255, 255, 255, 0) 100%);
     margin: 0 auto;
 }
